# index-collection

./: README.md  architecture.md
radix/: Cargo.toml  Makefile  README.md  latest.txt
radix/analysis/: bench_results.md  export_criterion.py  m0_radix+hashbrown.ipynb  m1_radix+gpu.ipynb  occ.v0.md  radix.ipynb  whitepaper-illustration-tracking.md
radix/analysis/.cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9  84c0f976e30e948e99073af70f4ae876-le64.cache-9  c6cafe6b1a56ed8b739253d6df90ca6a-le64.cache-9
radix/analysis/.mplconfig/: fontlist-v390.json
radix/analysis/data/: m0_hashbrown.csv  m1_radix_tree.csv  m1_radix_tree_gpu copy.csv  m1_radix_tree_gpu.csv  radix_tree.csv
radix/benches/: m0_bench.rs  m1_bench.rs
radix/docs/: architecture.md  bench_results.md  contains_greedy.md  m1_bench_results.md  optimisations.md  optimisations_v2.md  optimisations_v3.md  optimisations_v4.md  whitepaper-illustration-tracking.md  whitepaper.draft.2.md  whitepaper.md
radix/docs/files/: benchmark-specifications.md  entropy-directed-placement-v2.md  entropy-directed-placement.md  radix-hash-gpu-distributed.md  radix-hash-tree-plan.md  radix-tree-v4-changes.md
radix/docs/images/: whitepaper-figure-2-1-hash-segmented-bar-v2.png.old  whitepaper-figure-2-2-positional-entropy-compounding-v2.png.old
radix/src/: lib.rs  main.rs  radix_tree.rs
radix/src/m0_table/: mod.rs
radix/src/radix_tree/: analysis.rs  mod.rs
