[package]
name = "radix"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = ["bench-m0-hashbrown"]
bench-m0-hashbrown = []
bench-radix-tree = []
gpu32 = []

[lib]
bench = false

[[bin]]
name = "radix"
path = "src/main.rs"
bench = false

[dependencies]
hashbrown = "0.16.1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "m0_bench"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
